fix: html2canvas export element position shift issue; labels use DIN condensed

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* Fix html2canvas element shift place issue */
+@layer base {
+  img {
+    @apply inline-block;
+  }
+}
